crates/ftui-core/tests/compile_fail/raw_cannot_enable_focus.stderr
error[E0599]: no method named `enable_focus_events` found for struct `ftui_core::mode_typestate::TerminalMode<1>` in the current scope
 --> tests/compile_fail/raw_cannot_enable_focus.rs:6:9
  |
6 |     raw.enable_focus_events();
  |         ^^^^^^^^^^^^^^^^^^^
  |
help: there is a method `has_focus_events` with a similar name
  |
6 -     raw.enable_focus_events();
6 +     raw.has_focus_events();
  |
